--- a/app/templates/sections/banner.html
+++ b/app/templates/sections/banner.html
@@ -14,9 +14,9 @@
     <div class="absolute inset-0 bg-cover bg-center" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.95), rgba(38, 38, 38, 0.8)), url('/static/images/banner.jpeg');"></div>
     
     <!-- Content Container -->
-    <div class="relative z-10 h-full flex items-center">
+    <div class="relative z-10 h-full flex items-end justify-start">
         <!-- Left Side: Book Now Button -->
-        <div class="w-1/3 flex flex-col items-center justify-center mt-90 ml-40">
+        <div class="w-1/3 flex flex-col items-center mb-36 ml-36">
             <div id="bookNowContainer"
                     class="bg-gray border border-white rounded-[20px] px-10 py-7 hover:border-white mb-5 backdrop-blur-lg 
                         shadow-[0_0_8px_rgba(255,255,255,0.3)] 
