--- a/app/templates/sections/artist.html
+++ b/app/templates/sections/artist.html
@@ -7,12 +7,13 @@
     </div>
 
     <div class="w-full bg-gallery h-[800px]">
-        <div class="max-w-[1200px] mx-auto flex justify-center gap-30 z-10">
+        <div class=" mx-auto flex flex-col md:flex-row justify-center gap-2 z-10">
 
              <!-- EMEL CALOMOS -->
-            <div class="relative h-[450px] w-[390px] bg-black rounded-[15px] border-[3px] border-white
+            <div class="relative h-[300px] w-[240px] bg-black rounded-[15px] border-[3px] border-white 
+                lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40 z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-[60px] lg:mt-28 ml-28 z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -25,15 +26,15 @@
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100"
                     style="font-family:'Faustina', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
-                    <h1 class="text-white font-playfair text-5xl font-semibold mb-5">
+                    <h1 class="text-white font-playfair lg:text-5xl text-2xl font-semibold mb-5">
                     Emel Calomos
                     </h1>
-                    <h1 class="text-white text-base  font-semibold text-center absolute top-[80%] right-1/2 opacity-0 translate-x-[150%]
+                    <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[80%] top-[65%] md:top-[80%] right-1/2 opacity-0 translate-x-[150%]
                     transition-all duration-[1800ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100 mb-5">
                     Established the Slick Grind 
                     </h1>
-                    <h1 class="text-white text-base  font-semibold text-center absolute top-[115%] right-1/2 opacity-0 translate-x-[150%]
+                    <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[115%] top-[100%] md:top-[115%] right-1/2 opacity-0 translate-x-[150%]
                     transition-all duration-[2000ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100">
                     Since 2019.
@@ -41,7 +42,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute bottom-[20px] left-[20px] text-white text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-xl lg:text-3xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
@@ -51,16 +52,17 @@
                 <img
                     src="{{ url_for('static', filename='images/Slick.jpg') }}"
                     alt="Gallery Image"
-                    class="absolute top-[10px] left-[10px] w-15 h-15 rounded-[4px] opacity-85
+                    class="absolute lg:top-[10px] top-[5px] left-[5px] lg:left-[10px] w-8 lg:w-15 h-6 lg:h-15 rounded-[4px] opacity-85
                     transition-all duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[250%] group-hover:opacity-0"
                     />
             </div>
 
                 <!-- ANGELO PABALLA -->
-            <div class="relative h-[450px] w-[390px] bg-black rounded-[15px] border-[3px] border-white
+            <div class="relative h-[300px] w-[240px] bg-black rounded-[15px] border-[3px] border-white
+                 lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-40 z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden lg:mt-28 mt-4 ml-28 z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -73,15 +75,15 @@
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100"
                     style="font-family:'Faustina', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
-                    <h1 class="text-white font-playfair text-5xl font-semibold mb-5">
+                    <h1 class="text-white font-playfair lg:text-5xl text-2xl font-semibold mb-5">
                     Angelo Paballa
                     </h1>
-                    <h1 class="text-white text-base  font-semibold text-center absolute top-[80%] right-1/2 opacity-0 translate-x-[150%]
+                    <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[80%] top-[65%] md:top-[80%] right-1/2 opacity-0 translate-x-[150%]
                     transition-all duration-[1800ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100 mb-5">
                     First barber of Slick Grind Team
                     </h1>
-                    <h1 class="text-white text-base  font-semibold text-center absolute top-[115%] right-1/2 opacity-0 translate-x-[150%]
+                    <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[115%] top-[100%] md:top-[115%] right-1/2 opacity-0 translate-x-[150%]
                     transition-all duration-[2000ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100">
                     Artist since 2019.
@@ -89,7 +91,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute bottom-[20px] left-[20px] text-white text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-xl lg:text-3xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
@@ -99,7 +101,7 @@
                 <img
                     src="{{ url_for('static', filename='images/Slick.jpg') }}"
                     alt="Gallery Image"
-                    class="absolute top-[10px] left-[10px] w-15 h-15 rounded-[4px] opacity-85
+                    class="absolute lg:top-[10px] top-[5px] left-[5px] lg:left-[10px] w-8 lg:w-15 h-6 lg:h-15 rounded-[4px] opacity-85
                     transition-all duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     />
