--- a/app/templates/sections/navbar.html
+++ b/app/templates/sections/navbar.html
@@ -1,4 +1,4 @@
-<div class="h-[60px] bg-black flex justify-between items-center sm:h-[60px] md:h-[75px] lg:h-[75px]">
+<div class="h-[60px] bg-[black] flex justify-between items-center sm:h-[60px] md:h-[75px] lg:h-[75px]">
     <div class="ml-[20px] sm:ml-[20px] md:ml-[40px] lg:ml-[40px]">
       <a href="{{ url_for('admin.ADMINLOGIN') }}">
         <img src="{{ url_for('static', filename='images/SG-LOGO.jpg') }}" 
