just to refresh the github

--- a/app/templates/sections/services.html
+++ b/app/templates/sections/services.html
@@ -5,83 +5,54 @@
         <h1 class="font-playfair font-semibold text-[35px] text-white">SERVICES</h1>
 </div>
 
-<div class="w-full bg-gallery h-[800px]">
-    <div class="max-w mx-auto mr-10 ml-10 flex justify-center gap-[15px]">
-        <div class="relative h-65 w-250 bg-white border-black border-[6px] p-[10px] rounded-[35px] mt-50 flex items-center z-10">
-            <img src="{{ url_for('static', filename ='icons/beard.png') }}" 
-            alt="Beard Service" 
-            class="w-[95px] h-[95px] object-contain">
-            
-            <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
+<div class="w-full bg-gallery lg:h-[600px] h-[580px]">
+    <div class="max-w mx-auto mr-10 lg:ml-10 ml-[30px] flex lg:flex-row flex-col  justify-center gap-[15px]">
 
-            <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Beard Service</span>
-                <span class="text-sm font-faustina text-gray-500">
-                    Transform your look with our expert beard care service.</span>
-                    <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
-            </div>
-
-        </div>
-
-        
-        <div class="relative h-75 w-250 bg-white border-black border-[6px] p-[10px] rounded-[35px] mt-60 flex items-center z-10">
+        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] mt-[50px] flex items-center z-10 lg:ml-[200px] ">
             <img src="{{ url_for('static', filename ='icons/home.png') }}" 
             alt="Beard Service" 
-            class="w-[85px] h-[85px] object-contain">
+            class="lg:w-[80px] w-[50px] lg:h-[80px] h-[50px] ml-[6px] mr-[6px] object-contain">
             
-            <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Home Service</span>
-                <span class="text-sm font-faustina text-gray-500">
+                <span class="lg:text-4xl text-2xl font-faustina font-bold">Home Service</span>
+                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
+                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
 
-                <div class="relative h-75 w-250 bg-white border-black border-[6px] p-[10px] rounded-[35px] mt-70 flex items-center z-10">
+        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10">
             <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
             alt="Beard Service" 
-            class="w-[95px] h-[95px] object-contain">
+            class="lg:w-[95px] w-[65px] lg:h-[95px] h-[65px] object-contain">
             
-            <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Regular Haircut</span>
-                <span class="text-sm font-faustina text-gray-500">
+                <span class="lg:text-4xl text-2xl font-faustina font-bold">Regular Haircut</span>
+                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
+                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
 
-        <div class="relative h-75 w-250 bg-white border-black border-[6px] p-[10px] rounded-[35px] mt-60 flex items-center z-10">
+        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10 lg:mr-[200px]">
             <img src="{{ url_for('static', filename ='icons/chair.png') }}" 
             alt="Beard Service" 
-            class="w-[95px] h-[95px] object-contain">
+            class="lg:w-[95px] w-[65px] lg:h-[95px] h-[65px] object-contain">
             
-            <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Full Service</span>
-                <span class="text-sm font-faustina text-gray-500">
+                <span class="lg:text-4xl text-2xl font-faustina font-bold">Full Service</span>
+                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
+                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
-        <div class="relative h-75 w-250 bg-white border-black border-[6px] p-[10px] rounded-[35px] mt-50 flex items-center z-10">
-            <img src="{{ url_for('static', filename ='icons/razor.png') }}" 
-            alt="Beard Service" 
-            class="w-[95px] h-[95px] object-contain">
-            
-            <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
 
-            <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Full Shave</span>
-                <span class="text-sm font-faustina text-gray-500">
-                   Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
-            </div>
-        </div>
 
     </div>
 </div>
