--- a/app/templates/sections/artist.html
+++ b/app/templates/sections/artist.html
@@ -6,14 +6,14 @@
         <p class="font-lato font-light text-[18px] text-gray-300 -mt-2">Creator Behind Arts</p>
     </div>
 
-    <div class="w-full bg-gallery h-[800px]">
+    <div class="w-full bg-gallery lg:h-[700px] h-[650px]">
         <div class=" mx-auto flex flex-col md:flex-row justify-center gap-2 z-10">
 
              <!-- EMEL CALOMOS -->
-            <div class="relative h-[300px] w-[240px] bg-black rounded-[15px] border-[3px] border-white 
+            <div class="relative h-[250px] w-[200px] bg-black rounded-[15px] border-[3px] border-white 
                 lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-[60px] lg:mt-28 ml-28 z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-[60px] lg:mt-28 ml-[80px] z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -42,7 +42,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-xl lg:text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-lg lg:text-3xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
@@ -59,10 +59,10 @@
             </div>
 
                 <!-- ANGELO PABALLA -->
-            <div class="relative h-[300px] w-[240px] bg-black rounded-[15px] border-[3px] border-white
+            <div class="relative h-[250px] w-[200px] bg-black rounded-[15px] border-[3px] border-white
                  lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden lg:mt-28 mt-4 ml-28 z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden lg:mt-28 mt-4 ml-[80px] z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -91,7 +91,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-xl lg:text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-lg lg:text-3xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
