--- a/app/templates/sections/banner.html
+++ b/app/templates/sections/banner.html
@@ -8,36 +8,37 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<div class="relative h-screen z-10">
+<div class="relative h-full z-10">
     <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
     <!-- Background Image and Gradient Layer -->
-    <div class="absolute inset-0 bg-cover bg-center" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.95), rgba(38, 38, 38, 0.8)), url('/static/images/banner.jpeg');"></div>
+    <div class="absolute inset-0 bg-cover h-full bg-center" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.95), rgba(38, 38, 38, 0.8)), url('/static/images/banner.jpeg');"></div>
     
     <!-- Content Container -->
     <div class="relative z-10 h-full flex items-end justify-start">
         <!-- Left Side: Book Now Button -->
-        <div class="w-1/3 flex flex-col items-center mb-36 ml-36">
+        <div class="    flex flex-col items-center mb-[50px] lg:mb-[150px] ml-[30px] lg:ml-[100px]" >
             <div id="bookNowContainer"
-                    class="bg-gray border border-white rounded-[20px] px-10 py-7 hover:border-white mb-5 backdrop-blur-lg 
+                    class="bg-gray border border-white lg:rounded-[20px] rounded-[15px] lg:px-10 px-7 py-7 hover:border-white mb-5 backdrop-blur-lg 
                         shadow-[0_0_8px_rgba(255,255,255,0.3)] 
                         hover:shadow-[0_0_12px_rgba(255,255,255,0.6)] 
                         transition duration-300">
-                <a href="{{ url_for('routes.LOGIN') }}" class="text-5xl text-white font-playfair text-center block transition-colors">
+                <a href="{{ url_for('routes.LOGIN') }}" class="lg:text-5xl text-3xl text-white font-playfair text-center block transition-colors">
                     Book Now
                 </a>
             </div>
 
-            <h1 class="text-7xl text-white font-playfair font-bold">Slick Grind Barber</h1>
-            <p class="text-base text-center text-white font-montserrat">Located at 185, San Antonio Poblacion, Calabanga, Camarines Sur. Bojex Game Zone. At the back of Calabanga Integrated Terminal Exchange.</p>
-            <p class="text-sm text-white font-montserrat">
+            <h1 class="lg:text-7xl text-center text-4xl text-white font-playfair font-bold">Slick Grind Barber</h1>
+            <p class="lg:text-base text-xs text-center text-white font-montserrat">Located at 185, San Antonio Poblacion, Calabanga, Camarines Sur. Bojex Game Zone.</p>
+            <p class="lg:text-base text-xs text-center text-white font-montserrat">At the back of Calabanga Integrated Terminal Exchange.</p>
+            <p class="lg:text-sm text-[10px] text-center text-white font-montserrat">
                 Established by Emel Calomos since 2019.
             </p>
             
         </div>
         
         <!-- Right Side: Logo, Brand, and Info -->
-        <div class="w-1/3 pr-10 flex flex-col justify-end items-start">
-            <img src="/static/images/Slick.jpg" alt="Slick Grind Barber Logo" class="absolute top-5 right-5 w-25 h-15 rounded-[7px] opacity-50 object-cover pointer-events-none select-none overflow-hidden">
+        <div class="pr-10 flex flex-col justify-end items-start">
+            <img src="/static/images/Slick.jpg" alt="Slick Grind Barber Logo" class="absolute lg:top-10 top-5 lg:right-5 right-3 lg:w-25 w-15 lg:h-15 h-13 rounded-[7px] opacity-50 object-cover pointer-events-none select-none overflow-hidden">
         </div>
     </div>
 </div>
