--- a/app/templates/sections/navbar.html
+++ b/app/templates/sections/navbar.html
@@ -1,25 +1,55 @@
-<div class="h-[60px] bg-[black] flex justify-between items-center sm:h-[60px] md:h-[75px] lg:h-[75px]">
-    <div class="ml-[20px] sm:ml-[20px] md:ml-[40px] lg:ml-[40px]">
+<header class="relative bg-black text-white xs:w-[360px] sm:w-[360px] max-w-full lg:w-full">
+  <!-- IMPORTANT: put the peer checkbox BEFORE the elements it controls -->
+  <input id="menu-checkbox" type="checkbox" class="hidden peer" />
+
+  <!-- Top bar (logo, hamburger, desktop nav) -->
+  <div class="h-[60px] sm:h-[60px] md:h-[75px] lg:h-[75px] flex items-center justify-between">
+    <!-- Logo -->
+    <div class="ml-[10px] sm:ml-[10px] md:ml-[40px] lg:ml-[40px]">
       <a href="{{ url_for('admin.ADMINLOGIN') }}">
-        <img src="{{ url_for('static', filename='images/SG-LOGO.jpg') }}" 
-             alt="Logo" 
-             class="w-[50px] h-[50px] object-cover sm:h-[50px] sm:w-[50px] md:w-[75px] md:h-[75px] lg:h-[75px] lg:w-[75px]" />
-        </a>
+        <img src="{{ url_for('static', filename='images/SG-LOGO.jpg') }}"
+             alt="Logo"
+             class="w-[50px] h-[50px] sm:w-[50px] sm:h-[50px] md:w-[75px] md:h-[75px] lg:w-[75px] lg:h-[75px] object-cover" />
+      </a>
     </div>
 
-    <nav class="flex gap-[25px] mr-[40px] font-playfair text-[15px] text-white">
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Gallery</a>
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Team</a>
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Services Offered</a>
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Ratings</a>
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Book Now</a>
-        <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Contact Us</a>
-    </nav>
-</div>
+    <!-- Hamburger Toggle (visible on mobile only) -->
+    <div class="lg:hidden mr-[15px] flex items-center">
+     <label for="menu-checkbox" 
+  class="cursor-pointer lg:w-8 w-[30px] lg:h-8 h-[30px] flex flex-col justify-center items-end space-y-1 relative z-50">
+        <span class="block h-[3px] w-6 bg-white transition-transform duration-300 ease-in-out peer-checked:rotate-45 peer-checked:translate-y-[9px] justify-end"></span>
+        <span class="block h-[3px] w-5 bg-white transition-opacity duration-300 ease-in-out peer-checked:opacity-0"></span>
+        <span class="block h-[3px] w-4 bg-white transition-transform duration-300 ease-in-out peer-checked:-rotate-45 peer-checked:-translate-y-[9px]"></span>
+      </label>
+    </div>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-<style>
-  .font-playfair {
-    font-family: 'Playfair Display', serif;
-  }
-</style>
+    <!-- Nav Links (desktop only) -->
+    <nav id="nav-menu" class="hidden lg:flex gap-[25px] mr-[40px] font-playfair text-[15px]">
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Gallery</a>
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Team</a>
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Services Offered</a>
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Ratings</a>
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Book Now</a>
+      <a href="#" class="relative after:content-[''] after:absolute after:w-0 after:h-[2px] after:left-0 after:-bottom-1 after:bg-white after:transition-all after:duration-300 hover:after:w-full hover:text-gray-300">Contact Us</a>
+    </nav>
+  </div>
+
+  <!-- Mobile Dropdown Menu (THIS is now a sibling of the checkbox) -->
+  <!-- Note: peer-checked:max-h-[...] expands when checkbox is checked -->
+  <div id="mobile-menu"
+       class="lg:hidden max-h-0 overflow-hidden bg-black transition-[max-height] duration-300 ease-in-out peer-checked:max-h-[420px]">
+    <nav class="flex flex-col px-4 pb-4 gap-3">
+      <a href="#" class="py-2 border-b border-gray-700">Gallery</a>
+      <a href="#" class="py-2 border-b border-gray-700">Team</a>
+      <a href="#" class="py-2 border-b border-gray-700">Services Offered</a>
+      <a href="#" class="py-2 border-b border-gray-700">Ratings</a>
+      <a href="#" class="py-2 border-b border-gray-700">Book Now</a>
+      <a href="#" class="py-2 border-b border-gray-700">Contact Us</a>
+    </nav>
+  </div>
+
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <style>
+    .font-playfair { font-family: 'Playfair Display', serif; }
+  </style>
+</header>
