`Added database configuration, updated calendar JavaScript files, and modified admin dashboard templates to include logout functionality and appointment badges.`

--- a/app/templates/sections/banner.html
+++ b/app/templates/sections/banner.html
@@ -16,9 +16,9 @@
     <!-- Content Container -->
     <div class="relative z-10 h-full flex items-end justify-start">
         <!-- Left Side: Book Now Button -->
-        <div class="    flex flex-col items-center mb-[50px] lg:mb-[150px] ml-[30px] lg:ml-[100px]" >
+        <div class="flex flex-col items-center lg:mb-[150px] ml-[50px] mb-[120px] lg:ml-[100px]" >
             <div id="bookNowContainer"
-                    class="bg-gray border border-white lg:rounded-[20px] rounded-[15px] lg:px-10 px-7 py-7 hover:border-white mb-5 backdrop-blur-lg 
+                    class="bg-gray border border-white lg:rounded-[20px] rounded-[15px] lg:px-10 px-7 py-7 hover:border-white lg:mb-5 mb-[180px] backdrop-blur-lg 
                         shadow-[0_0_8px_rgba(255,255,255,0.3)] 
                         hover:shadow-[0_0_12px_rgba(255,255,255,0.6)] 
                         transition duration-300">
@@ -27,10 +27,10 @@
                 </a>
             </div>
 
-            <h1 class="lg:text-7xl text-center text-4xl text-white font-playfair font-bold">Slick Grind Barber</h1>
-            <p class="lg:text-base text-xs text-center text-white font-montserrat">Located at 185, San Antonio Poblacion, Calabanga, Camarines Sur. Bojex Game Zone.</p>
-            <p class="lg:text-base text-xs text-center text-white font-montserrat">At the back of Calabanga Integrated Terminal Exchange.</p>
-            <p class="lg:text-sm text-[10px] text-center text-white font-montserrat">
+            <h1 class="lg:text-7xl text-center text-3xl text-white font-playfair font-bold">Slick Grind Barber</h1>
+            <p class="lg:text-base text-[10px] text-center text-white font-montserrat">Located at 185, San Antonio Poblacion, Calabanga, Camarines Sur. Bojex Game Zone.</p>
+            <p class="lg:text-base text-[10px] text-center text-white font-montserrat">At the back of Calabanga Integrated Terminal Exchange.</p>
+            <p class="lg:text-sm text-[8px] text-center text-white font-montserrat">
                 Established by Emel Calomos since 2019.
             </p>
             
@@ -38,7 +38,7 @@
         
         <!-- Right Side: Logo, Brand, and Info -->
         <div class="pr-10 flex flex-col justify-end items-start">
-            <img src="/static/images/Slick.jpg" alt="Slick Grind Barber Logo" class="absolute lg:top-10 top-5 lg:right-5 right-3 lg:w-25 w-15 lg:h-15 h-13 rounded-[7px] opacity-50 object-cover pointer-events-none select-none overflow-hidden">
+            <img src="/static/images/Slick.jpg" alt="Slick Grind Barber Logo" class="absolute lg:top-10 top-5 lg:right-5 right-3 lg:w-25 w-10 lg:h-15 h-8 rounded-[3px] opacity-50 object-cover pointer-events-none select-none overflow-hidden">
         </div>
     </div>
 </div>
