--- a/app/templates/sections/footer.html
+++ b/app/templates/sections/footer.html
@@ -13,10 +13,10 @@
 <footer class="relative z-20 border-t border-white">
   <div class="content">
     <img src="{{ url_for('static', filename='images/logo.jpg') }}" class="logo">
-    <p class="text-3xl font-bold font-faustina mt-3">Slick Grind Barber</p>
-    <p class="text-xl font-faustina">Visit our shop and rediscover your confidence.</p>
-    <p>Monday to Saturday: 9:00 AM to 5:00 PM</p>
-    <p>Sunday: Closed</p>
+    <p class="lg:text-3xl text-3xl font-bold font-faustina lg:mt-3">Slick Grind Barber</p>
+    <p class="lg:text-base text-sm lg:mt-[-1.5px] mt-[-30px] font-faustina">Visit our shop and rediscover your confidence.</p>
+    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] font-faustina">Monday to Saturday: 9:00 AM to 5:00 PM</p>
+    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] font-faustina">Sunday: Closed</p>
     <ul class="sm">
       <li><a href="#"><img src="{{ url_for('static', filename='icons/facebook (3).png') }}" class="socials"></a></li>
       <li><a href="#"><img src="{{ url_for('static', filename='icons/phone (2).png') }}" class="phone"></a></li>
@@ -25,14 +25,13 @@
       <li><a href="#"><img src="{{ url_for('static', filename='icons/instagram (2).png') }}" class="socials"></a></li>
     </ul>
     <ul class="links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a class="font-faustina text-sm" href="#">Appointment</a></li>
+      <li><a class="font-faustina text-sm" href="#">Artist</a></li>
+      <li><a class="font-faustina text-sm" href="#">Location</a></li>
+      <li><a class="font-faustina text-sm" href="#">Contact</a></li>
     </ul>
   </div>
-  <p class="copyright">
+  <p class="copyright font-faustina lg:text-base text-sm">
     &copy; <span id="year"></span> Slick Grind Barber | All Rights Reserved | MDO
   </p>
   
