--- a/app/templates/sections/gallery.html
+++ b/app/templates/sections/gallery.html
@@ -1,14 +1,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@600&family=Faustina:wght@400;700&family=Lato:wght@300&display=swap" rel="stylesheet">
 <body class="">
-<div class="bg-black w-full h-[100px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
-  <h1 class="font-playfair font-semibold text-[35px] text-white">GALLERY</h1>
-  <p class="font-lato font-light text-[18px] text-gray-300 -mt-2">Meticulously Crafted Artworks</p>
+<div class="bg-black w-full lg:h-[100px] h-[80px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+  <h1 class="font-playfair font-semibold lg:text-[35px] text-[25px] text-white">GALLERY</h1>
+  <p class="font-lato font-light lg:text-[18px] text-[13px] text-gray-300 -mt-2">Meticulously Crafted Artworks</p>
 </div>
 
 <!-- Infinite Scroll Gallery -->
-<div class="relative h-screen  overflow-hidden bg-gallery py-10">
+<div class="relative lg:h-screen h-[500px] overflow-hidden bg-gallery py-10">
     <div class="fixed inset-0 bg-black/1 z-0"></div>
-  <div id="gallery-track-left" class="flex gap-4 mb-4 animate-scroll-left relative z-10">
+  <div id="gallery-track-left" class="flex min-w-max lg:gap-4 gap-2 lg:mb-4 mb-2 animate-scroll-left relative z-10">
     {% for img, title, subtitle in [
       ('images/H1.jpg', 'Low Taper Fade', 'The hair gradually shortens to skin level...'),
       ('images/h2.jpg', 'Mid Fade', 'A balanced fade that works for most styles...'),
@@ -19,8 +19,8 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  h-[400px] w-[300px] overflow-hidden 
-                  transition-transform duration-500 ease-in-out 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  transition-transform duration-900 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
@@ -32,8 +32,8 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center 
                      bg-black/40 opacity-0 group-hover:opacity-100 
                     transition duration-500 ease-in-out">
-            <h2 class="text-white text-center font-playfair text-5xl mb-2">{{ title }}</h2>
-            <p class="text-gray-200 font-montserrat text-sm px-4 text-center">{{ subtitle }}</p>
+            <h2 class="text-white text-center font-playfair lg:text-5xl text-2xl mb-2">{{ title }}</h2>
+            <p class="text-gray-200 font-montserrat lg:text-sm text-[10px] px-4 text-center">{{ subtitle }}</p>
         </div>
       </div>
     {% endfor %}
@@ -48,7 +48,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  h-[400px] w-[300px] overflow-hidden 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
@@ -61,14 +61,14 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center 
                      bg-black/40 opacity-0 group-hover:opacity-100 
                     transition duration-500 ease-in-out">
-            <h2 class="text-white text-center font-playfair text-5xl mb-2">{{ title }}</h2>
-            <p class="text-gray-200 font-montserrat text-sm px-4 text-center">{{ subtitle }}</p>
+            <h2 class="text-white text-center font-playfair lg:text-5xl text-2xl mb-2">{{ title }}</h2>
+            <p class="text-gray-200 font-montserrat lg:text-sm text-[10px] px-4 text-center">{{ subtitle }}</p>
         </div>
       </div>
     {% endfor %}
   </div>
 
-  <div id="gallery-track-right" class="flex gap-4 animate-scroll-right relative z-10">
+  <div id="gallery-track-right" class="flex min-w-max  lg:gap-4 gap-2 animate-scroll-right relative z-10">
     {% for img, title, subtitle in [
       ('images/H1.jpg', 'Low Taper Fade', 'The hair gradually shortens to skin level...'),
       ('images/h2.jpg', 'Mid Fade', 'A balanced fade that works for most styles...'),
@@ -79,8 +79,8 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  h-[400px] w-[300px] overflow-hidden 
-                  transition-transform duration-500 ease-in-out 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  transition-transform duration-100 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
         <!-- Image with contained blur on hover -->
@@ -92,8 +92,8 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center 
                      bg-black/40 opacity-0 group-hover:opacity-100 
                     transition duration-500 ease-in-out">
-            <h2 class="text-white text-center font-playfair text-5xl mb-2">{{ title }}</h2>
-            <p class="text-gray-200 font-montserrat text-sm px-4 text-center">{{ subtitle }}</p>
+            <h2 class="text-white text-center font-playfair lg:text-5xl text-2xl mb-2">{{ title }}</h2>
+            <p class="text-gray-200 font-montserrat lg:text-sm text-[10px] px-4 text-center">{{ subtitle }}</p>
         </div>
       </div>
     {% endfor %}
@@ -108,7 +108,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  h-[400px] w-[300px] overflow-hidden 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
@@ -121,8 +121,8 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center 
                      bg-black/40 opacity-0 group-hover:opacity-100 
                     transition duration-500 ease-in-out">
-            <h2 class="text-white text-center font-playfair text-5xl mb-2">{{ title }}</h2>
-            <p class="text-gray-200 font-montserrat text-sm px-4 text-center">{{ subtitle }}</p>
+            <h2 class="text-white text-center font-playfair lg:text-5xl text-2xl mb-2">{{ title }}</h2>
+            <p class="text-gray-200 font-montserrat lg:text-sm text-[10px] px-4 text-center">{{ subtitle }}</p>
         </div>
       </div>
     {% endfor %}
@@ -155,13 +155,32 @@
 }
 
 .animate-scroll-right {
-  animation: scroll-right 60s linear infinite;
+  animation: scroll-right 95s linear infinite;
 }
 
 .animate-scroll-left {
-  animation: scroll-left 60s linear infinite;
+  animation: scroll-left 95s linear infinite;
 }
-
+@media (max-width: 1024px) and (min-width: 640px) {
+  .animate-scroll-left {
+    animation-duration: 95s linear infinite; /* faster on smaller screens */
+  }
+}
+@media (max-width: 1024px) and (min-width: 640px) {
+  .animate-scroll-right {
+    animation-duration: 95s linear infinite; /* faster on smaller screens */
+  }
+}
+@media (max-width: 639px) {
+  .animate-scroll-left {
+    animation-duration: 70s; /* fast */
+  }
+}
+@media (max-width: 639px) {
+  .animate-scroll-right {
+    animation-duration: 70s; /* fast */
+  }
+}
 </style>
 </body>
 
